--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 February 1997</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>anico97.github.io/nicopogi/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+63 906 146 8950</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Batangas City, Philippines</span></li>
                 </ul>
